--- a/src/assets/Less/Header/Header.less
+++ b/src/assets/Less/Header/Header.less
@@ -1,6 +1,8 @@
 .Header__container {
   width: 100%;
   height: 50px;
+  background: #fff;
+  padding-bottom: 55px;
   .Header__cont {
     width: 75%;
     height: 100%;
@@ -8,7 +10,7 @@
     // 导航栏
     .Header__nav {
       height: 50px;
-      line-height: 50px;
+      line-height: 55px;
       .Header__logo {
         float: left;
         line-height: 50px;
@@ -65,8 +67,9 @@
     // 右侧
     .Header__right {
       ul {
-        line-height: 50px;
+        line-height: 55px;
         list-style-type: none;
+        padding-left: 0;
         li {
           float: left;
           padding-left: 20px;
