--- a/src/assets/Less/App.less
+++ b/src/assets/Less/App.less
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+body{
+  background: #f6f6f8 !important;
+}
+
 /* 滚动条美化 */
 ::-webkit-scrollbar-track-piece {
   background-color: hsl(0, 0%, 97%);
