--- a/src/assets/Less/Header/Header.less
+++ b/src/assets/Less/Header/Header.less
@@ -1,42 +1,20 @@
 .Header__container {
   width: 100%;
-  height: 50px;
+  height: 100px;
   background: #fff;
-  padding-bottom: 55px;
+  overflow: hidden;
   .Header__cont {
     width: 75%;
     height: 100%;
     margin: 0 auto;
-    // 导航栏
-    .Header__nav {
-      height: 50px;
-      line-height: 55px;
+    .Header__top {
+      height: 55px;
+      border-bottom: 1px solid #f5f5f5;
       .Header__logo {
         float: left;
-        line-height: 50px;
+        line-height: 55px;
         img {
           height: 40px;
-        }
-      }
-      ul {
-        float: left;
-        list-style-type: none;
-        li {
-          padding: 0 18px;
-          float: left;
-          a {
-            color: #666;
-            font-size: 16px;
-            text-decoration: none;
-          }
-        }
-        li:first-child {
-          padding-left: 0;
-        }
-        li:hover {
-          a {
-            color: #0084ff;
-          }
         }
       }
       .Header__search {
@@ -44,6 +22,7 @@
         float: right;
         width: 230px;
         height: 100%;
+        line-height: 60px;
         input {
           width: 100%;
           height: 30px;
@@ -52,7 +31,7 @@
           outline: none;
           border: none;
           border-radius: 7px;
-          background: #e5e5e5;
+          background: #f3f4f6;
           color: #8590a6;
           font-size: 12px;
         }
@@ -64,34 +43,45 @@
         }
       }
     }
-    // 右侧
-    .Header__right {
-      ul {
-        line-height: 55px;
+    .Header__bottom {
+      height: 45px;
+      line-height: 44px;
+      color: #8590a6;
+      .Header__bottom__left {
+        float: left;
         list-style-type: none;
-        padding-left: 0;
         li {
+          padding: 0 16px;
           float: left;
-          padding-left: 20px;
           a {
+            color: #666;
+            font-size: 14px;
             text-decoration: none;
-            line-height: 50px;
-            img {
-              width: 33px;
-            }
           }
         }
-        li:first-child {
-          padding-left: 0;
+        li:hover {
           a {
-            img {
-              width: 40px;
-            }
+            color: #0084ff;
           }
         }
-        li:nth-child(2) {
-          a {
-            color: orange;
+      }
+      .Header__bottom__right{
+        line-height: 37px;
+        float: right;
+        a{
+          text-decoration: none;
+        }
+        button{
+          width: 75px;
+          height: 30px;
+          outline: none;
+          border: #f3f4f6;
+          background: #f3f4f6;
+          color: #45484f;
+          font-size: 13px;
+          img{
+            height: 13px;
+            margin-right: 5px;
           }
         }
       }
