--- a/src/assets/Less/Layout/Main.less
+++ b/src/assets/Less/Layout/Main.less
@@ -1,8 +1,8 @@
 .Main__container{
   width: 100%;
+  margin-top: 20px;
   .Main__cont{
-    width: 75%;
-    // height: 500px;
+    width: 65%;
     margin: 0 auto;
   }
 }
