--- a/src/assets/Less/Login/Login.less
+++ b/src/assets/Less/Login/Login.less
@@ -4,22 +4,28 @@
   top: 50%;
   transform: translate(-50%, -50%);
   width: 420px;
-  height: 420px;
+  height: 500px;
   background: #fff;
   padding: 2.25rem;
   text-align: center;
-
+  .back{
+    float: left;
+    font-size: 13px;
+    font-weight: bold;
+    color: #98a6ad;
+  }
   .title {
+    clear: both;
     font-weight: 700;
     font-size: 1.125rem;
-    color: #6c757d;
+    color: #585a63;
   }
   .text {
     color: #98a6ad;
     font-size: 0.9rem;
   }
   .tips {
-    float: right;
+    float: left;
     color: #98a6ad;
     font-weight: 700;
     font-size: 0.9rem;
@@ -29,9 +35,15 @@
     height: 40px;
     clear: both;
   }
+  .text{
+    span{
+      cursor: pointer;
+      color: #0084ff;
+    }
+  }
 }
 
 .register {
   height: auto;
-  transform: translate(-50%, -35%);
+  padding-bottom: 10px;
 }
