--- a/src/assets/Less/Layout/Base.less
+++ b/src/assets/Less/Layout/Base.less
@@ -1,7 +1,7 @@
-.Main__container{
+.Base__container{
   width: 100%;
   margin-top: 20px;
-  .Main__cont{
+  .Base__cont{
     width: 65%;
     margin: 0 auto;
   }
