--- a/src/assets/Less/Layout/Header/Header.less
+++ b/src/assets/Less/Layout/Header/Header.less
@@ -93,29 +93,27 @@
     justify-content: space-between;
     flex-flow: wrap;
     position: absolute;
-    left: -500px;
+    left: -380px;
     top: 50px;
     z-index: 9999;
-    width: 650px;
+    width: 520px;
     height: 500px;
-    padding: 0 20px;
+    padding: 0 10px;
     background: #fff;
     .chart {
       position: relative;
       top: 10px;
-      // left: 15px;
-      // right: 15px;
-      width: 300px;
-      height: 250px;
+      width: 250px;
+      height: 240px;
       h3 {
         position: absolute;
-        font-size: 16px;
+        font-size: 12px;
       }
       .dom {
         position: absolute;
         top: -20px;
-        width: 300px;
-        height: 250px;
+        width: 100%;
+        height: 100%;
       }
     }
   }
