--- a/src/assets/Less/Layout/Header/Header.less
+++ b/src/assets/Less/Layout/Header/Header.less
@@ -79,6 +79,7 @@
           background: #f3f4f6;
           color: #45484f;
           font-size: 13px;
+          margin-left: 10px;
           img {
             height: 13px;
             margin-right: 5px;
@@ -93,7 +94,7 @@
     justify-content: space-between;
     flex-flow: wrap;
     position: absolute;
-    left: -380px;
+    left: -370px;
     top: 50px;
     z-index: 9999;
     width: 520px;
