--- a/src/assets/Less/Index/ArticleContent.less
+++ b/src/assets/Less/Index/ArticleContent.less
@@ -30,6 +30,7 @@
     .ArticleContent__text {
       overflow: hidden;
       text-overflow: ellipsis;
+      line-height: 1.8em;
       display: -webkit-box;
       -webkit-line-clamp: 4;
       -webkit-box-orient: vertical;
