--- a/src/assets/Less/Article/Comment.less
+++ b/src/assets/Less/Article/Comment.less
@@ -1,4 +1,4 @@
-.Comment__container{
+.Comment__container {
   position: relative;
   width: 100%;
   height: auto;
@@ -6,9 +6,15 @@
   padding: 20px 5%;
   border-radius: 7px;
   background: #fff;
-  .Comment__title{
+  .Comment__title {
     color: #555;
     font-size: 20px;
     font-weight: 700;
+  }
+  .Comment__cont {
+    input,
+    textarea {
+      color: #555;
+    }
   }
 }
