--- a/src/assets/Less/Layout/Base.less
+++ b/src/assets/Less/Layout/Base.less
@@ -2,7 +2,18 @@
   width: 100%;
   margin-top: 20px;
   .Base__cont{
-    width: 70%;
+    width: 74%;
     margin: 0 auto;
+  }
+}
+
+@media screen and (max-width: 950px) {
+  .Base__container{
+    .Base__cont{
+      width: 85vw;
+      .Sidebar{
+        display: none;
+      }
+    }
   }
 }
