--- a/src/assets/Less/Layout/Header/Header.less
+++ b/src/assets/Less/Layout/Header/Header.less
@@ -119,3 +119,24 @@
     }
   }
 }
+
+@media screen and (max-width: 850px) {
+  .Header__bottom__right {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .Header__cont {
+    width: 100vw !important;
+    .Header__bottom__left {
+      padding-left: 0 !important;
+    }
+  }
+}
+
+@media screen and (max-width: 420px) {
+  .Header__search{
+    width: 180px !important;
+  }
+}
