--- a/src/assets/Less/Index/ArticleContent.less
+++ b/src/assets/Less/Index/ArticleContent.less
@@ -65,3 +65,13 @@
 .ArticleContent__container:first-child {
   margin-top: 0;
 }
+
+@media screen and (max-width: 650px) {
+  .ArticleContent__text-tow{
+    width: 100% !important;
+  }
+
+  .ArticleContent__img{
+    display: none;
+  }
+}
